# anaimport

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  checkConsecutiveEvents.cc  findPairingsOnRosters.cc  main.cc  myPairConv.cc  myPairConv.h  mylib.cc  mylib.h  pair_imp.cc  pair_imp.cc~  pair_imp.h  pair_imp.h~  statsOnPairings.cc  stresstest.cc  testMyClass.cc  testMyPairConv.cc  testPairingImport.cc
